name:                poly
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
                     Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable poly
  build-depends:
      base          >= 4.8   && <5
    , pretty        >= 1.1   && <1.2
    , parsec        >= 3.1   && <3.2
    , text          >= 1.2   && <1.3
    , containers    >= 0.5   && <0.6
    , mtl           >= 2.2   && <2.3
    , transformers  >= 0.3.0 && <0.6
    , repline       >= 0.1.2.0

  other-modules:
    Env
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
